iio: xilinx-ams: Unmask interrupts after updating alarms (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12267,6 +12267,7 @@
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 	patches.suse/iio-adc-pac1934-fix-channel-disable-configuration.patch
+	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
 
 	########################################################
 	# end of sorted patches
