--- a/series.conf
+++ b/series.conf
@@ -12273,6 +12273,7 @@
 	patches.suse/iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_CLKDIV_.patch
 	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
+	patches.suse/iio-consumers-Fix-handling-of-negative-channel-scale.patch
 
 	########################################################
 	# end of sorted patches
