--- a/series.conf
+++ b/series.conf
@@ -12258,6 +12258,7 @@
 	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
+	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 
 	########################################################
 	# end of sorted patches
