--- a/series.conf
+++ b/series.conf
@@ -12249,6 +12249,7 @@
 	patches.suse/KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsing.patch
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
 	patches.suse/KEYS-trusted_tpm1-Compare-HMAC-values-in-constant-ti.patch
+	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
 
 	########################################################
 	# end of sorted patches
