tty: n_gsm: Don't block input queue by waiting MSC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12254,6 +12254,7 @@
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
+	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
 
 	########################################################
 	# end of sorted patches
