--- a/series.conf
+++ b/series.conf
@@ -12268,6 +12268,7 @@
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 	patches.suse/iio-adc-pac1934-fix-channel-disable-configuration.patch
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
+	patches.suse/iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
 
 	########################################################
 	# end of sorted patches
