crypto: hisilicon - re-enable address prefetch after device resuming (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12240,6 +12240,7 @@
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-octeontx2-Call-strscpy-with-correct-size-argu.patch
 	patches.suse/crypto-hisilicon-zip-remove-unnecessary-validation-f.patch
+	patches.suse/crypto-hisilicon-re-enable-address-prefetch-after-de.patch
 
 	########################################################
 	# end of sorted patches
