--- a/series.conf
+++ b/series.conf
@@ -12270,6 +12270,7 @@
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
 	patches.suse/iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
 	patches.suse/iio-frequency-adf4350-Fix-prescaler-usage.patch
+	patches.suse/iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_CLKDIV_.patch
 
 	########################################################
 	# end of sorted patches
