--- a/series.conf
+++ b/series.conf
@@ -34426,6 +34426,7 @@
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect-WQE-c.patch
+	patches.suse/RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-device.patch
 
 	########################################################
 	# end of sorted patches
