--- a/series.conf
+++ b/series.conf
@@ -34427,6 +34427,7 @@
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect-WQE-c.patch
 	patches.suse/RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-device.patch
+	patches.suse/RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error-messa.patch
 
 	########################################################
 	# end of sorted patches
