RDMA/mlx5: Fix vport loopback forcing for MPV device (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -12077,6 +12077,7 @@
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect-WQE-c.patch
+	patches.suse/RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-device.patch
 
 	########################################################
 	# end of sorted patches
