--- a/series.conf
+++ b/series.conf
@@ -34429,6 +34429,7 @@
 	patches.suse/RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-device.patch
 	patches.suse/RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error-messa.patch
 	patches.suse/RDMA-core-Resolve-MAC-of-next-hop-device-without-ARP.patch
+	patches.suse/IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 
 	########################################################
 	# end of sorted patches
