RDMA/rxe: Fix race in do_task() when draining (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -12081,6 +12081,7 @@
 	patches.suse/RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error-messa.patch
 	patches.suse/RDMA-core-Resolve-MAC-of-next-hop-device-without-ARP.patch
 	patches.suse/IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
+	patches.suse/RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 
 	########################################################
 	# end of sorted patches
