RDMA/siw: Always report immediate post SQ errors (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -34431,6 +34431,7 @@
 	patches.suse/RDMA-core-Resolve-MAC-of-next-hop-device-without-ARP.patch
 	patches.suse/IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 	patches.suse/RDMA-rxe-Fix-race-in-do_task-when-draining.patch
+	patches.suse/RDMA-siw-Always-report-immediate-post-SQ-errors.patch
 
 	########################################################
 	# end of sorted patches
