blacklist.conf: fix accidentally split line

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1147,7 +1147,6 @@ fc5414a4774e14e51a93499a6adfdc45f2de82e0 # New HW, others also already missing
 850470a8413a8a78e772c4f6bd9fe81ec6bd5b0f # CVE-2025-39843 https://bugzilla.suse.com/show_bug.cgi?id=1250270#c2
 d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.com/show_bug.cgi?id=1250376#c2
 7e2368a21741e2db542330b32aa6fdd8908e7cff # debugging feature
-6deeefb820d0efb0b36753622fb982d03b37b3ad # amdgpu: causing s2idle regression (b
-sc#1243112)
+6deeefb820d0efb0b36753622fb982d03b37b3ad # amdgpu: causing s2idle regression (bsc#1243112)
 3b3b84aacb4420226576c9732e7b539ca7b79633 # causes kernel panic with BPF selftests, fix is difficult to backport, see bsc#1250574
 82a0302e7167d0b7c6cde56613db3748f8dd806d # comment only
