--- a/series.conf
+++ b/series.conf
@@ -8569,6 +8569,7 @@
 	patches.suse/nvmet-pci-epf-cleanup-link-state-management.patch
 	patches.suse/kunit-qemu_configs-SH-Respect-kunit-cmdline.patch
 	patches.suse/cpufreq-sched-Fix-the-usage-of-CPUFREQ_NEED_UPDATE_L.patch
+	patches.suse/cpufreq-sched-Explicitly-synchronize-limits_changed-.patch
 	patches.suse/cpufreq-amd-pstate-Fix-min_limit-perf-and-freq-updation-for-performance-governor.patch
 	patches.suse/cpufreq-amd-pstate-Enable-ITMT-support-after-initializing-core-rankings.patch
 	patches.suse/Documentation-PM-runtime-Fix-a-reference-to-pm_runti.patch
