--- a/series.conf
+++ b/series.conf
@@ -10267,6 +10267,7 @@
 	patches.suse/ata-ahci-Disallow-LPM-for-ASUSPRO-D840SA-motherboard.patch
 	patches.suse/ata-ahci-Disallow-LPM-for-Asus-B550-F-motherboard.patch
 	patches.suse/selinux-fix-selinux_xfrm_alloc_user-to-set-correct-c.patch
+	patches.suse/sched_ext-sched-core-Don-t-call-scx_group_set_weight.patch
 	patches.suse/workqueue-Initialize-wq_isolated_cpumask-in-workqueue_init.patch
 	patches.suse/hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
 	patches.suse/hwmon-occ-Rework-attribute-registration-for-stack-us.patch
