x86/smp: Fix mwait_play_dead() and acpi_processor_ffh_play_dead()  noreturn behavior (jsc#PED-13815).

--- a/series.conf
+++ b/series.conf
@@ -52064,6 +52064,7 @@
 	patches.suse/intel_idle-Provide-the-default-enter_dead-handler.patch
 	patches.suse/ACPI-processor_idle-Export-acpi_processor_ffh_play_dead.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
+	patches.suse/x86-smp-Fix-mwait_play_dead-and-acpi_processor_ffh_play_de.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
 	patches.suse/x86-speculation-Add-a-conditional-CS-prefix-to-CALL_NOSPEC.patch
 	patches.suse/x86-entry-Add-__init-to-ia32_emulation_override_cmdline.patch
