--- a/series.conf
+++ b/series.conf
@@ -34424,6 +34424,7 @@
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
+	patches.suse/orangefs-Remove-unused-type-in-macro-fill_default_sys_attrs.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
