--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/6.17.1-001-blk-mq-fix-blk_mq_tags-double-free-while-nr_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
