media: tuner: xc5000: Fix use-after-free in xc5000_release (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/6.17.1-005-wifi-rtw89-fix-use-after-free-in-rtw89_core_tx.patch
 	patches.kernel.org/6.17.1-006-media-b2c2-Fix-use-after-free-causing-by-irq_c.patch
 	patches.kernel.org/6.17.1-007-media-i2c-tc358743-Fix-use-after-free-bugs-cau.patch
+	patches.kernel.org/6.17.1-008-media-tuner-xc5000-Fix-use-after-free-in-xc500.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
