wifi: rtw89: fix use-after-free in rtw89_core_tx_kick_off_and_wait() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/6.17.1-002-gcc-plugins-Remove-TODO_verify_il-for-GCC-16.patch
 	patches.kernel.org/6.17.1-003-scsi-target-target_core_configfs-Add-length-ch.patch
 	patches.kernel.org/6.17.1-004-ALSA-usb-audio-fix-race-condition-to-UAF-in-sn.patch
+	patches.kernel.org/6.17.1-005-wifi-rtw89-fix-use-after-free-in-rtw89_core_tx.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
