--- a/series.conf
+++ b/series.conf
@@ -42,6 +42,7 @@
 	patches.kernel.org/6.17.1-013-media-iris-Fix-memory-leak-by-freeing-untracke.patch
 	patches.kernel.org/6.17.1-014-media-stm32-csi-Fix-dereference-before-NULL-ch.patch
 	patches.kernel.org/6.17.1-015-ASoC-qcom-audioreach-fix-potential-null-pointe.patch
+	patches.kernel.org/6.17.1-016-Linux-6.17.1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
