media: b2c2: Fix use-after-free causing by irq_check_work in flexcop_pci_remove (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/6.17.1-003-scsi-target-target_core_configfs-Add-length-ch.patch
 	patches.kernel.org/6.17.1-004-ALSA-usb-audio-fix-race-condition-to-UAF-in-sn.patch
 	patches.kernel.org/6.17.1-005-wifi-rtw89-fix-use-after-free-in-rtw89_core_tx.patch
+	patches.kernel.org/6.17.1-006-media-b2c2-Fix-use-after-free-causing-by-irq_c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
