--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/6.17.1-004-ALSA-usb-audio-fix-race-condition-to-UAF-in-sn.patch
 	patches.kernel.org/6.17.1-005-wifi-rtw89-fix-use-after-free-in-rtw89_core_tx.patch
 	patches.kernel.org/6.17.1-006-media-b2c2-Fix-use-after-free-causing-by-irq_c.patch
+	patches.kernel.org/6.17.1-007-media-i2c-tc358743-Fix-use-after-free-bugs-cau.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
