--- a/series.conf
+++ b/series.conf
@@ -40,6 +40,7 @@
 	patches.kernel.org/6.17.1-011-mm-swap-check-for-stable-address-space-before-.patch
 	patches.kernel.org/6.17.1-012-wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi.patch
 	patches.kernel.org/6.17.1-013-media-iris-Fix-memory-leak-by-freeing-untracke.patch
+	patches.kernel.org/6.17.1-014-media-stm32-csi-Fix-dereference-before-NULL-ch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
