mm: swap: check for stable address space before operating on the VMA (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -37,6 +37,7 @@
 	patches.kernel.org/6.17.1-008-media-tuner-xc5000-Fix-use-after-free-in-xc500.patch
 	patches.kernel.org/6.17.1-009-media-rc-fix-races-with-imon_disconnect.patch
 	patches.kernel.org/6.17.1-010-media-uvcvideo-Mark-invalid-entities-with-id-U.patch
+	patches.kernel.org/6.17.1-011-mm-swap-check-for-stable-address-space-before-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
