--- a/series.conf
+++ b/series.conf
@@ -38,6 +38,7 @@
 	patches.kernel.org/6.17.1-009-media-rc-fix-races-with-imon_disconnect.patch
 	patches.kernel.org/6.17.1-010-media-uvcvideo-Mark-invalid-entities-with-id-U.patch
 	patches.kernel.org/6.17.1-011-mm-swap-check-for-stable-address-space-before-.patch
+	patches.kernel.org/6.17.1-012-wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
