--- a/series.conf
+++ b/series.conf
@@ -36,6 +36,7 @@
 	patches.kernel.org/6.17.1-007-media-i2c-tc358743-Fix-use-after-free-bugs-cau.patch
 	patches.kernel.org/6.17.1-008-media-tuner-xc5000-Fix-use-after-free-in-xc500.patch
 	patches.kernel.org/6.17.1-009-media-rc-fix-races-with-imon_disconnect.patch
+	patches.kernel.org/6.17.1-010-media-uvcvideo-Mark-invalid-entities-with-id-U.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
