media: iris: Fix memory leak by freeing untracked persist buffer (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -39,6 +39,7 @@
 	patches.kernel.org/6.17.1-010-media-uvcvideo-Mark-invalid-entities-with-id-U.patch
 	patches.kernel.org/6.17.1-011-mm-swap-check-for-stable-address-space-before-.patch
 	patches.kernel.org/6.17.1-012-wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi.patch
+	patches.kernel.org/6.17.1-013-media-iris-Fix-memory-leak-by-freeing-untracke.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
