ASoC: qcom: audioreach: fix potential null pointer dereference (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -41,6 +41,7 @@
 	patches.kernel.org/6.17.1-012-wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi.patch
 	patches.kernel.org/6.17.1-013-media-iris-Fix-memory-leak-by-freeing-untracke.patch
 	patches.kernel.org/6.17.1-014-media-stm32-csi-Fix-dereference-before-NULL-ch.patch
+	patches.kernel.org/6.17.1-015-ASoC-qcom-audioreach-fix-potential-null-pointe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
