--- a/series.conf
+++ b/series.conf
@@ -10680,6 +10680,7 @@
 	patches.kernel.org/6.12.51-004-media-b2c2-Fix-use-after-free-causing-by-irq_.patch
 	patches.kernel.org/6.12.51-005-media-tuner-xc5000-Fix-use-after-free-in-xc50.patch
 	patches.kernel.org/6.12.51-006-media-rc-fix-races-with-imon_disconnect.patch
+	patches.kernel.org/6.12.51-007-media-uvcvideo-Mark-invalid-entities-with-id-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
