--- a/series.conf
+++ b/series.conf
@@ -10682,6 +10682,7 @@
 	patches.kernel.org/6.12.51-006-media-rc-fix-races-with-imon_disconnect.patch
 	patches.kernel.org/6.12.51-007-media-uvcvideo-Mark-invalid-entities-with-id-.patch
 	patches.kernel.org/6.12.51-008-mm-swap-check-for-stable-address-space-before.patch
+	patches.kernel.org/6.12.51-009-wifi-ath11k-fix-NULL-dereference-in-ath11k_qm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
