--- a/series.conf
+++ b/series.conf
@@ -10674,6 +10674,7 @@
 	patches.kernel.org/6.12.50-085-Revert-usb-xhci-remove-option-to-change-a-def.patch
 	patches.kernel.org/6.12.50-086-drm-i915-backlight-Return-immediately-when-sc.patch
 	patches.kernel.org/6.12.50-087-Linux-6.12.50.patch
+	patches.kernel.org/6.12.51-001-crypto-sha256-fix-crash-at-kexec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
