--- a/series.conf
+++ b/series.conf
@@ -10681,6 +10681,7 @@
 	patches.kernel.org/6.12.51-005-media-tuner-xc5000-Fix-use-after-free-in-xc50.patch
 	patches.kernel.org/6.12.51-006-media-rc-fix-races-with-imon_disconnect.patch
 	patches.kernel.org/6.12.51-007-media-uvcvideo-Mark-invalid-entities-with-id-.patch
+	patches.kernel.org/6.12.51-008-mm-swap-check-for-stable-address-space-before.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
