media: tuner: xc5000: Fix use-after-free in xc5000_release (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10678,6 +10678,7 @@
 	patches.kernel.org/6.12.51-002-gcc-plugins-Remove-TODO_verify_il-for-GCC-16.patch
 	patches.kernel.org/6.12.51-003-scsi-target-target_core_configfs-Add-length-c.patch
 	patches.kernel.org/6.12.51-004-media-b2c2-Fix-use-after-free-causing-by-irq_.patch
+	patches.kernel.org/6.12.51-005-media-tuner-xc5000-Fix-use-after-free-in-xc50.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
