--- a/series.conf
+++ b/series.conf
@@ -10684,6 +10684,7 @@
 	patches.kernel.org/6.12.51-008-mm-swap-check-for-stable-address-space-before.patch
 	patches.kernel.org/6.12.51-009-wifi-ath11k-fix-NULL-dereference-in-ath11k_qm.patch
 	patches.kernel.org/6.12.51-010-ASoC-qcom-audioreach-fix-potential-null-point.patch
+	patches.kernel.org/6.12.51-011-Linux-6.12.51.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
