--- a/series.conf
+++ b/series.conf
@@ -34376,6 +34376,7 @@
 	patches.suse/nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req_op.patch
 	patches.suse/nvmet-fc-avoid-scheduling-association-deletion-twice.patch
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
+	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
