--- a/series.conf
+++ b/series.conf
@@ -12079,6 +12079,7 @@
 	patches.suse/nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req_op.patch
 	patches.suse/nvmet-fc-avoid-scheduling-association-deletion-twice.patch
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
+	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 
 	########################################################
 	# end of sorted patches
