--- a/series.conf
+++ b/series.conf
@@ -12078,6 +12078,7 @@
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req_op.patch
 	patches.suse/nvmet-fc-avoid-scheduling-association-deletion-twice.patch
+	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
 
 	########################################################
 	# end of sorted patches
