--- a/series.conf
+++ b/series.conf
@@ -12077,6 +12077,7 @@
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req_op.patch
+	patches.suse/nvmet-fc-avoid-scheduling-association-deletion-twice.patch
 
 	########################################################
 	# end of sorted patches
