nvme-tcp: send only permitted commands for secure concat (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12082,6 +12082,7 @@
 	patches.suse/nvmet-fc-avoid-scheduling-association-deletion-twice.patch
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
+	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
 
 	########################################################
 	# end of sorted patches
