--- a/series.conf
+++ b/series.conf
@@ -12077,6 +12077,7 @@
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
+	patches.suse/nvme-auth-update-bi_directional-flag.patch
 	patches.suse/nvmet-fc-move-lsop-put-work-to-nvmet_fc_ls_req_op.patch
 	patches.suse/nvmet-fc-avoid-scheduling-association-deletion-twice.patch
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
