scsi: lpfc: Define size of debugfs entry for xri rebalancing (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -12097,6 +12097,7 @@
 	patches.suse/scsi-lpfc-Decrement-ndlp-kref-after-FDISC-retries-ex.patch
 	patches.suse/scsi-lpfc-Check-return-status-of-lpfc_reset_flush_io.patch
 	patches.suse/scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-PRLI-in-.patch
+	patches.suse/scsi-lpfc-Define-size-of-debugfs-entry-for-xri-rebal.patch
 
 	########################################################
 	# end of sorted patches
