scsi: lpfc: Convert debugfs directory counts from atomic to unsigned int (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -12100,6 +12100,7 @@
 	patches.suse/scsi-lpfc-Define-size-of-debugfs-entry-for-xri-rebal.patch
 	patches.suse/scsi-lpfc-Use-switch-case-statements-in-DIF-debugfs-.patch
 	patches.suse/scsi-lpfc-Clean-up-extraneous-phba-dentries.patch
+	patches.suse/scsi-lpfc-Convert-debugfs-directory-counts-from-atom.patch
 
 	########################################################
 	# end of sorted patches
