scsi: lpfc: Remove redundant assignment to avoid memory leak (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -11649,6 +11649,7 @@
 	patches.suse/drm-amdgpu-fix-incorrect-vm-flags-to-map-bo.patch
 	patches.suse/drm-amdgpu-fix-task-hang-from-failed-job-submission-.patch
 	patches.suse/scsi-lpfc-Fix-wrong-function-reference-in-a-comment.patch
+	patches.suse/scsi-lpfc-Remove-redundant-assignment-to-avoid-memor.patch
 	patches.suse/ata-libata-scsi-Fix-CDL-control.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
 	patches.suse/btrfs-fix-incorrect-log-message-for-nobarrier-mount-.patch
