--- a/series.conf
+++ b/series.conf
@@ -12101,6 +12101,7 @@
 	patches.suse/scsi-lpfc-Use-switch-case-statements-in-DIF-debugfs-.patch
 	patches.suse/scsi-lpfc-Clean-up-extraneous-phba-dentries.patch
 	patches.suse/scsi-lpfc-Convert-debugfs-directory-counts-from-atom.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
 
 	########################################################
 	# end of sorted patches
