scsi: lpfc: Ensure PLOGI_ACC is sent prior to PRLI in Point to Point topology (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -12096,6 +12096,7 @@
 	patches.suse/scsi-lpfc-Remove-ndlp-kref-decrement-clause-for-F_Po.patch
 	patches.suse/scsi-lpfc-Decrement-ndlp-kref-after-FDISC-retries-ex.patch
 	patches.suse/scsi-lpfc-Check-return-status-of-lpfc_reset_flush_io.patch
+	patches.suse/scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-PRLI-in-.patch
 
 	########################################################
 	# end of sorted patches
