--- a/series.conf
+++ b/series.conf
@@ -12099,6 +12099,7 @@
 	patches.suse/scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-PRLI-in-.patch
 	patches.suse/scsi-lpfc-Define-size-of-debugfs-entry-for-xri-rebal.patch
 	patches.suse/scsi-lpfc-Use-switch-case-statements-in-DIF-debugfs-.patch
+	patches.suse/scsi-lpfc-Clean-up-extraneous-phba-dentries.patch
 
 	########################################################
 	# end of sorted patches
