scsi: lpfc: Copyright updates for 14.4.0.11 patches (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -12102,6 +12102,7 @@
 	patches.suse/scsi-lpfc-Clean-up-extraneous-phba-dentries.patch
 	patches.suse/scsi-lpfc-Convert-debugfs-directory-counts-from-atom.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
+	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
 
 	########################################################
 	# end of sorted patches
