--- a/series.conf
+++ b/series.conf
@@ -11901,6 +11901,7 @@
 	patches.suse/spi-spi-fsl-lpspi-Set-correct-chip-select-polarity-b.patch
 	patches.suse/spi-spi-fsl-lpspi-Reset-FIFO-and-disable-module-on-t.patch
 	patches.suse/spi-spi-fsl-lpspi-Clear-status-register-after-disabl.patch
+	patches.suse/scsi-lpfc-Fix-buffer-free-clear-order-in-deferred-re.patch
 	patches.suse/perf-bpf-event-Fix-use-after-free-in-synthesis.patch
 	patches.suse/perf-bpf-utils-Constify-bpil_array_desc.patch
 	patches.suse/perf-bpf-utils-Harden-get_bpf_prog_info_linear.patch
