--- a/series.conf
+++ b/series.conf
@@ -12089,6 +12089,7 @@
 	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
+	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
 
 	########################################################
 	# end of sorted patches
