scsi: lpfc: use min() to improve code (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -12087,6 +12087,7 @@
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
+	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 
 	########################################################
 	# end of sorted patches
