--- a/series.conf
+++ b/series.conf
@@ -12093,6 +12093,7 @@
 	patches.suse/scsi-lpfc-Remove-unused-member-variables-in-struct-l.patch
 	patches.suse/scsi-lpfc-Abort-outstanding-ELS-WQEs-regardless-of-i.patch
 	patches.suse/scsi-lpfc-Clean-up-allocated-queues-when-queue-setup.patch
+	patches.suse/scsi-lpfc-Remove-ndlp-kref-decrement-clause-for-F_Po.patch
 
 	########################################################
 	# end of sorted patches
