scsi: lpfc: Check return status of lpfc_reset_flush_io_context during TGT_RESET (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -12095,6 +12095,7 @@
 	patches.suse/scsi-lpfc-Clean-up-allocated-queues-when-queue-setup.patch
 	patches.suse/scsi-lpfc-Remove-ndlp-kref-decrement-clause-for-F_Po.patch
 	patches.suse/scsi-lpfc-Decrement-ndlp-kref-after-FDISC-retries-ex.patch
+	patches.suse/scsi-lpfc-Check-return-status-of-lpfc_reset_flush_io.patch
 
 	########################################################
 	# end of sorted patches
