scsi: fc: Avoid -Wflex-array-member-not-at-end warnings (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -12088,6 +12088,7 @@
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
+	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
 
 	########################################################
 	# end of sorted patches
