--- a/series.conf
+++ b/series.conf
@@ -12091,6 +12091,7 @@
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
 	patches.suse/scsi-lpfc-Remove-unused-member-variables-in-struct-l.patch
+	patches.suse/scsi-lpfc-Abort-outstanding-ELS-WQEs-regardless-of-i.patch
 
 	########################################################
 	# end of sorted patches
