scsi: lpfc: Use switch case statements in DIF debugfs handlers (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -12098,6 +12098,7 @@
 	patches.suse/scsi-lpfc-Check-return-status-of-lpfc_reset_flush_io.patch
 	patches.suse/scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-PRLI-in-.patch
 	patches.suse/scsi-lpfc-Define-size-of-debugfs-entry-for-xri-rebal.patch
+	patches.suse/scsi-lpfc-Use-switch-case-statements-in-DIF-debugfs-.patch
 
 	########################################################
 	# end of sorted patches
