--- a/series.conf
+++ b/series.conf
@@ -34432,6 +34432,7 @@
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
+	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
