scsi: lpfc: Fix wrong function reference in a comment (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -34083,6 +34083,7 @@
 	patches.suse/io_uring-net-commit-partial-buffers-on-retry.patch
 	patches.suse/drm-amdgpu-fix-incorrect-vm-flags-to-map-bo.patch
 	patches.suse/drm-amdgpu-fix-task-hang-from-failed-job-submission-.patch
+	patches.suse/scsi-lpfc-Fix-wrong-function-reference-in-a-comment.patch
 	patches.suse/ata-libata-scsi-Fix-CDL-control.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
 	patches.suse/fs-buffer-fix-use-after-free-when-call-bh_read-helpe.patch
