scsi: lpfc: Remove ndlp kref decrement clause for F_Port_Ctrl in lpfc_cleanup (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -34438,6 +34438,7 @@
 	patches.suse/scsi-lpfc-Remove-unused-member-variables-in-struct-l.patch
 	patches.suse/scsi-lpfc-Abort-outstanding-ELS-WQEs-regardless-of-i.patch
 	patches.suse/scsi-lpfc-Clean-up-allocated-queues-when-queue-setup.patch
+	patches.suse/scsi-lpfc-Remove-ndlp-kref-decrement-clause-for-F_Po.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
