--- a/series.conf
+++ b/series.conf
@@ -34443,6 +34443,7 @@
 	patches.suse/scsi-lpfc-Check-return-status-of-lpfc_reset_flush_io.patch
 	patches.suse/scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-PRLI-in-.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
+	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
