scsi: lpfc: Fix buffer free/clear order in deferred receive path (bsc#1250519).

--- a/series.conf
+++ b/series.conf
@@ -34242,6 +34242,7 @@
 	patches.suse/spi-spi-fsl-lpspi-Fix-transmissions-when-using-CONT.patch
 	patches.suse/spi-spi-fsl-lpspi-Set-correct-chip-select-polarity-b.patch
 	patches.suse/spi-spi-fsl-lpspi-Reset-FIFO-and-disable-module-on-t.patch
+	patches.suse/scsi-lpfc-Fix-buffer-free-clear-order-in-deferred-re.patch
 	patches.suse/i2c-i801-Hide-Intel-Birch-Stream-SoC-TCO-WDT.patch
 	patches.suse/NFSv4-Don-t-clear-capabilities-that-won-t-be-reset.patch
 	patches.suse/NFSv4-Clear-the-NFS_CAP_FS_LOCATIONS-flag-if-it-is-not-set.patch
