--- a/series.conf
+++ b/series.conf
@@ -34434,6 +34434,7 @@
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
+	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
