--- a/series.conf
+++ b/series.conf
@@ -34440,6 +34440,7 @@
 	patches.suse/scsi-lpfc-Clean-up-allocated-queues-when-queue-setup.patch
 	patches.suse/scsi-lpfc-Remove-ndlp-kref-decrement-clause-for-F_Po.patch
 	patches.suse/scsi-lpfc-Decrement-ndlp-kref-after-FDISC-retries-ex.patch
+	patches.suse/scsi-lpfc-Check-return-status-of-lpfc_reset_flush_io.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
