scsi: qla2xxx: Remove firmware URL (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33861,6 +33861,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.10-patches.patch
 	patches.suse/scsi-mpi3mr-Fix-kernel-doc-issues-in-mpi3mr_app.c.patch
 	patches.suse/scsi-qla2xxx-Avoid-stack-frame-size-warning-in-qla_d.patch
+	patches.suse/scsi-qla2xxx-Remove-firmware-URL.patch
 	patches.suse/scsi-mpi3mr-Fix-race-between-config-read-submit-and-interr.patch
 	patches.suse/scsi-mpi3mr-Serialize-admin-queue-BAR-writes-on-32-bit-sys.patch
 	patches.suse/scsi-ibmvscsi_tgt-Fix-dma_unmap_sg-nents-value.patch
