--- a/series.conf
+++ b/series.conf
@@ -34436,6 +34436,7 @@
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
+	patches.suse/scsi-qla2xxx-Use-secs_to_jiffies-instead-of-msecs_to.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
 	patches.suse/scsi-lpfc-Remove-unused-member-variables-in-struct-l.patch
 	patches.suse/scsi-lpfc-Abort-outstanding-ELS-WQEs-regardless-of-i.patch
