--- a/series.conf
+++ b/series.conf
@@ -34440,6 +34440,7 @@
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
 	patches.suse/scsi-qla2xxx-edif-Fix-incorrect-sign-of-error-code.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-sign-of-error-code-in-STA.patch
+	patches.suse/scsi-qla2xxx-Fix-incorrect-sign-of-error-code-in-qla.patch
 	patches.suse/scsi-lpfc-Remove-unused-member-variables-in-struct-l.patch
 	patches.suse/scsi-lpfc-Abort-outstanding-ELS-WQEs-regardless-of-i.patch
 	patches.suse/scsi-lpfc-Clean-up-allocated-queues-when-queue-setup.patch
