--- a/series.conf
+++ b/series.conf
@@ -12093,6 +12093,7 @@
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
 	patches.suse/scsi-qla2xxx-Use-secs_to_jiffies-instead-of-msecs_to.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
+	patches.suse/scsi-qla2xxx-edif-Fix-incorrect-sign-of-error-code.patch
 	patches.suse/scsi-lpfc-Remove-unused-member-variables-in-struct-l.patch
 	patches.suse/scsi-lpfc-Abort-outstanding-ELS-WQEs-regardless-of-i.patch
 	patches.suse/scsi-lpfc-Clean-up-allocated-queues-when-queue-setup.patch
