scsi: qla2xxx: Fix incorrect sign of error code in START_SP_W_RETRIES() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12094,6 +12094,7 @@
 	patches.suse/scsi-qla2xxx-Use-secs_to_jiffies-instead-of-msecs_to.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
 	patches.suse/scsi-qla2xxx-edif-Fix-incorrect-sign-of-error-code.patch
+	patches.suse/scsi-qla2xxx-Fix-incorrect-sign-of-error-code-in-STA.patch
 	patches.suse/scsi-lpfc-Remove-unused-member-variables-in-struct-l.patch
 	patches.suse/scsi-lpfc-Abort-outstanding-ELS-WQEs-regardless-of-i.patch
 	patches.suse/scsi-lpfc-Clean-up-allocated-queues-when-queue-setup.patch
