--- a/series.conf
+++ b/series.conf
@@ -12298,6 +12298,7 @@
 
 	patches.suse/powerpc-kexec_file-Add-KEXEC_SIG-support.patch
 +hare	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
+	patches.suse/wifi-ath12k-Add-MODULE_FIRMWARE-entries.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
