wifi: ath12k: Add MODULE_FIRMWARE() entries (bsc#1250952).

--- a/series.conf
+++ b/series.conf
@@ -34477,6 +34477,7 @@
 	patches.suse/kdump-crashkernel-cma-update-Documentation.patch
 	patches.suse/kdump-wait-for-dma-to-time-out-when-using-cma.patch
 	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
+	patches.suse/wifi-ath12k-Add-MODULE_FIRMWARE-entries.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
