arm64: dts: marvell: cn9132-clearfog: disable eMMC high-speed modes (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -12006,6 +12006,7 @@
 	patches.suse/HID-amd_sfh-Add-sync-across-amd-sfh-work-functions.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
 	patches.suse/cpufreq-Initialize-cpufreq-based-invariance-before-subsys.patch
+	patches.suse/arm64-dts-marvell-cn9132-clearfog-disable-eMMC-high-speed-.patch
 	patches.suse/reset-eyeq-fix-OF-node-leak.patch
 	patches.suse/Bluetooth-hci_sync-Fix-hci_resume_advertising_sync.patch
 	patches.suse/Bluetooth-hci_event-Fix-UAF-in-hci_acl_create_conn_s.patch
