--- a/series.conf
+++ b/series.conf
@@ -12030,6 +12030,7 @@
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
+	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
