--- a/series.conf
+++ b/series.conf
@@ -12032,6 +12032,7 @@
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
+	patches.suse/bpf-arm64-Call-bpf_jit_binary_pack_finalize-in-bpf_jit_fre.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
