--- a/series.conf
+++ b/series.conf
@@ -12078,6 +12078,7 @@
 	patches.suse/arm64-dts-imx93-kontron-Fix-USB-port-assignment.patch
 	patches.suse/arm64-dts-imx95-Correct-the-lpuart7-and-lpuart8-srcid.patch
 	patches.suse/arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-iommu-map.patch
+	patches.suse/arm64-dts-apple-Add-ethernet0-alias-for-J375-template.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-arm_scmi-Mark-VirtIO-ready-before-registeri.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8183-prob.patch
