ACPI: NFIT: Fix incorrect ndr_desc being reportedin dev_err message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34465,6 +34465,7 @@
 	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
+	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 
 	########################################################
 	# end of sorted patches
