--- a/series.conf
+++ b/series.conf
@@ -34462,6 +34462,7 @@
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
+	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
 
 	########################################################
 	# end of sorted patches
