PCI: tegra: Fix devm_kcalloc() argument order for port->phys allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34461,6 +34461,7 @@
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
+	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
 
 	########################################################
 	# end of sorted patches
