--- a/series.conf
+++ b/series.conf
@@ -34463,6 +34463,7 @@
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
 	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
+	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 
 	########################################################
 	# end of sorted patches
