dmaengine: Fix dma_async_tx_descriptor->tx_submit documentation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34452,6 +34452,7 @@
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
+	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
 
 	########################################################
 	# end of sorted patches
