PCI/IOV: Add PCI rescan-remove locking when enabling/disabling SR-IOV (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34456,6 +34456,7 @@
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
 	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
+	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
 
 	########################################################
 	# end of sorted patches
