--- a/series.conf
+++ b/series.conf
@@ -34464,6 +34464,7 @@
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
 	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
+	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 
 	########################################################
 	# end of sorted patches
