--- a/series.conf
+++ b/series.conf
@@ -34458,6 +34458,7 @@
 	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
 	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
+	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 
 	########################################################
 	# end of sorted patches
