--- a/series.conf
+++ b/series.conf
@@ -34455,6 +34455,7 @@
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
+	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
 
 	########################################################
 	# end of sorted patches
