PCI: rcar-host: Drop PMSR spinlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34460,6 +34460,7 @@
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
+	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 
 	########################################################
 	# end of sorted patches
