PCI/ERR: Fix uevent on failure to recover (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34453,6 +34453,7 @@
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
+	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 
 	########################################################
 	# end of sorted patches
