phy: rockchip: naneng-combphy: Enable U3 OTG port for RK3568 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34451,6 +34451,7 @@
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
+	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 
 	########################################################
 	# end of sorted patches
