--- a/series.conf
+++ b/series.conf
@@ -34459,6 +34459,7 @@
 	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
+	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 
 	########################################################
 	# end of sorted patches
