--- a/series.conf
+++ b/series.conf
@@ -34404,6 +34404,7 @@
 	patches.suse/media-cx18-Add-missing-check-after-DMA-map.patch
 	patches.suse/media-pci-ivtv-Add-missing-check-after-DMA-map.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
+	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
