--- a/series.conf
+++ b/series.conf
@@ -12299,6 +12299,7 @@
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.suse/PCI-rcar-host-Convert-struct-rcar_msi-mask_lock-into.patch
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
+	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
 
 	########################################################
 	# end of sorted patches
