--- a/series.conf
+++ b/series.conf
@@ -12279,6 +12279,7 @@
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
 	patches.suse/bus-mhi-ep-Fix-chained-transfer-handling-in-read-pat.patch
+	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 
 	########################################################
 	# end of sorted patches
