PCI: tegra: Convert struct tegra_msi mask_lock into raw spinlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12300,6 +12300,7 @@
 	patches.suse/PCI-rcar-host-Convert-struct-rcar_msi-mask_lock-into.patch
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
 	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
+	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 
 	########################################################
 	# end of sorted patches
