dmaengine: Fix dma_async_tx_descriptor->tx_submit documentation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12280,6 +12280,7 @@
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
 	patches.suse/bus-mhi-ep-Fix-chained-transfer-handling-in-read-pat.patch
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
+	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
 
 	########################################################
 	# end of sorted patches
