PCI: rcar-gen4: Add missing 1ms delay after PWR reset assertion (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12293,6 +12293,7 @@
 	patches.suse/PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 	patches.suse/PCI-rcar-gen4-Fix-PHY-initialization.patch
+	patches.suse/PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-reset-.patch
 
 	########################################################
 	# end of sorted patches
