PCI: tegra194: Handle errors in BPMP response (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12288,6 +12288,7 @@
 	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
 	patches.suse/PCI-tegra194-Reset-BARs-when-running-in-PCIe-endpoin.patch
+	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 
 	########################################################
 	# end of sorted patches
