media: rc: fix races with imon_disconnect() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12177,6 +12177,7 @@
 	patches.suse/media-s5p-mfc-remove-an-unused-uninitialized-variabl.patch
 	patches.suse/media-venus-firmware-Use-correct-reset-sequence-for-.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
+	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
