--- a/series.conf
+++ b/series.conf
@@ -12295,6 +12295,7 @@
 	patches.suse/PCI-rcar-gen4-Fix-PHY-initialization.patch
 	patches.suse/PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-reset-.patch
 	patches.suse/PCI-rcar-gen4-Assure-reset-occurs-before-DBI-access.patch
+	patches.suse/PCI-rcar-gen4-Fix-inverted-break-condition-in-PHY-in.patch
 
 	########################################################
 	# end of sorted patches
