PCI/IOV: Add PCI rescan-remove locking when enabling/disabling SR-IOV (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12285,6 +12285,7 @@
 	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
 	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
 	patches.suse/PCI-pwrctrl-Fix-device-leak-at-registration.patch
+	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
 
 	########################################################
 	# end of sorted patches
