--- a/series.conf
+++ b/series.conf
@@ -12292,6 +12292,7 @@
 	patches.suse/PCI-j721e-Fix-programming-sequence-of-strap-settings.patch
 	patches.suse/PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
+	patches.suse/PCI-rcar-gen4-Fix-PHY-initialization.patch
 
 	########################################################
 	# end of sorted patches
