--- a/series.conf
+++ b/series.conf
@@ -12297,6 +12297,7 @@
 	patches.suse/PCI-rcar-gen4-Assure-reset-occurs-before-DBI-access.patch
 	patches.suse/PCI-rcar-gen4-Fix-inverted-break-condition-in-PHY-in.patch
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
+	patches.suse/PCI-rcar-host-Convert-struct-rcar_msi-mask_lock-into.patch
 
 	########################################################
 	# end of sorted patches
