ACPI: NFIT: Fix incorrect ndr_desc being reportedin dev_err message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12304,6 +12304,7 @@
 	patches.suse/PCI-xilinx-nwl-Fix-ECAM-programming.patch
 	patches.suse/PCI-ACPI-Fix-pci_acpi_preserve_config-memory-leak.patch
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
+	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 
 	########################################################
 	# end of sorted patches
