--- a/series.conf
+++ b/series.conf
@@ -12289,6 +12289,7 @@
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
 	patches.suse/PCI-tegra194-Reset-BARs-when-running-in-PCIe-endpoin.patch
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
+	patches.suse/PCI-j721e-Fix-programming-sequence-of-strap-settings.patch
 
 	########################################################
 	# end of sorted patches
