PCI: rcar-host: Drop PMSR spinlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12296,6 +12296,7 @@
 	patches.suse/PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-reset-.patch
 	patches.suse/PCI-rcar-gen4-Assure-reset-occurs-before-DBI-access.patch
 	patches.suse/PCI-rcar-gen4-Fix-inverted-break-condition-in-PHY-in.patch
+	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 
 	########################################################
 	# end of sorted patches
