watchdog: mpc8xxx_wdt: Reload the watchdog timer when enabling the watchdog (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12303,6 +12303,7 @@
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 	patches.suse/PCI-xilinx-nwl-Fix-ECAM-programming.patch
 	patches.suse/PCI-ACPI-Fix-pci_acpi_preserve_config-memory-leak.patch
+	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 
 	########################################################
 	# end of sorted patches
