PCI/pwrctrl: Fix device leak at registration (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12284,6 +12284,7 @@
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
 	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
+	patches.suse/PCI-pwrctrl-Fix-device-leak-at-registration.patch
 
 	########################################################
 	# end of sorted patches
