PCI/AER: Fix missing uevent on recovery when a reset is requested (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12282,6 +12282,7 @@
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
 	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
+	patches.suse/PCI-AER-Fix-missing-uevent-on-recovery-when-a-reset-.patch
 
 	########################################################
 	# end of sorted patches
