PCI/ACPI: Fix pci_acpi_preserve_config() memory leak (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12302,6 +12302,7 @@
 	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 	patches.suse/PCI-xilinx-nwl-Fix-ECAM-programming.patch
+	patches.suse/PCI-ACPI-Fix-pci_acpi_preserve_config-memory-leak.patch
 
 	########################################################
 	# end of sorted patches
