--- a/series.conf
+++ b/series.conf
@@ -12287,6 +12287,7 @@
 	patches.suse/PCI-pwrctrl-Fix-device-leak-at-registration.patch
 	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
 	patches.suse/PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_msi_irq.patch
+	patches.suse/PCI-tegra194-Reset-BARs-when-running-in-PCIe-endpoin.patch
 
 	########################################################
 	# end of sorted patches
