--- a/series.conf
+++ b/series.conf
@@ -12298,6 +12298,7 @@
 	patches.suse/PCI-rcar-gen4-Fix-inverted-break-condition-in-PHY-in.patch
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.suse/PCI-rcar-host-Convert-struct-rcar_msi-mask_lock-into.patch
+	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
 
 	########################################################
 	# end of sorted patches
