PCI/ERR: Fix uevent on failure to recover (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12281,6 +12281,7 @@
 	patches.suse/bus-mhi-ep-Fix-chained-transfer-handling-in-read-pat.patch
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 	patches.suse/dmaengine-Fix-dma_async_tx_descriptor-tx_submit-docu.patch
+	patches.suse/PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 
 	########################################################
 	# end of sorted patches
