PCI: rcar-gen4: Assure reset occurs before DBI access (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12294,6 +12294,7 @@
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 	patches.suse/PCI-rcar-gen4-Fix-PHY-initialization.patch
 	patches.suse/PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-reset-.patch
+	patches.suse/PCI-rcar-gen4-Assure-reset-occurs-before-DBI-access.patch
 
 	########################################################
 	# end of sorted patches
