--- a/series.conf
+++ b/series.conf
@@ -12290,6 +12290,7 @@
 	patches.suse/PCI-tegra194-Reset-BARs-when-running-in-PCIe-endpoin.patch
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.suse/PCI-j721e-Fix-programming-sequence-of-strap-settings.patch
+	patches.suse/PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 
 	########################################################
 	# end of sorted patches
