--- a/series.conf
+++ b/series.conf
@@ -12291,6 +12291,7 @@
 	patches.suse/PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.suse/PCI-j721e-Fix-programming-sequence-of-strap-settings.patch
 	patches.suse/PCI-j721e-Fix-incorrect-error-message-in-probe.patch
+	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 
 	########################################################
 	# end of sorted patches
