sunrpc: fix null pointer dereference on zero-length checksum (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34516,6 +34516,7 @@
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
+	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 
 	########################################################
 	# end of sorted patches
