NFSD: Fix destination buffer size in nfsd4_ssc_setup_dul() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34517,6 +34517,7 @@
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
+	patches.suse/NFSD-Fix-destination-buffer-size-in-nfsd4_ssc_setup_dul.patch
 
 	########################################################
 	# end of sorted patches
