nfsd: nfserr_jukebox in nlm_fopen should lead to a retry (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34518,6 +34518,7 @@
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 	patches.suse/NFSD-Fix-destination-buffer-size-in-nfsd4_ssc_setup_dul.patch
+	patches.suse/nfsd-nfserr_jukebox-in-nlm_fopen-should-lead-to-a-retry.patch
 
 	########################################################
 	# end of sorted patches
