--- a/series.conf
+++ b/series.conf
@@ -9467,6 +9467,7 @@
 	patches.suse/ext4-only-dirty-folios-when-data-journaling-regular-files.patch
 	patches.suse/NFSD-unregister-filesystem-in-case-genl_register_family-fails.patch
 	patches.suse/NFSD-fix-race-between-nfsd-registration-and-exports_proc.patch
+	patches.suse/nfsd-fix-access-checking-for-NLM-under-XPRTSEC-policies.patch
 	patches.suse/nfsd-nfsd4_spo_must_allow-must-check-this-is-a-v4-compound-request.patch
 	patches.suse/nfsd-Initialize-ssc-before-laundromat_work-to-prevent-NULL-dereference.patch
 	patches.suse/svcrdma-Unregister-the-device-if-svc_rdma_accept-fails.patch
