usb: xhci: Limit Stop Endpoint retries (git-fixes).
kABI fixup for 474538b8dd1cd9c666e56cfe8ef60fbb0fb513f4

--- a/series.conf
+++ b/series.conf
@@ -35147,6 +35147,7 @@
 	patches.kabi/kABI-arm64-ftrace-restore-init_module.patch
 	patches.kabi/struct-ci_hdrc-new-member-has_short_pkt_limit-to-end.patch
 	patches.kabi/atm-atmtcp-Prevent-arbitrary-write-in-atmtcp_recv_co.patch
+	patches.kabi/usb-xhci-Limit-Stop-Endpoint-retries.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
