--- a/series.conf
+++ b/series.conf
@@ -3285,6 +3285,7 @@
 	patches.suse/selftests-bpf-Fix-compilation-error-in-get_uprobe_of.patch
 	patches.suse/tcp_bpf-Charge-receive-socket-buffer-in-bpf_tcp_ingr.patch
 	patches.suse/tcp_bpf-Add-sk_rmem_alloc-related-logic-for-tcp_bpf-.patch
+	patches.suse/tcp_bpf-Fix-copied-value-in-tcp_bpf_sendmsg.patch
 	patches.suse/bpf-Check-negative-offsets-in-__bpf_skb_min_len.patch
 	patches.suse/selftests-memfd-run-sysctl-tests-when-PID-namespace-.patch
 	patches.suse/ocfs2-fix-the-space-leak-in-LA-when-releasing-LA.patch
