--- a/series.conf
+++ b/series.conf
@@ -34452,6 +34452,7 @@
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 	patches.suse/orangefs-Remove-unused-type-in-macro-fill_default_sys_attrs.patch
+	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect-WQE-c.patch
