iidc/ice/irdma: Update IDC to support multiple consumers (jsc#PED-13728 jsc#PED-13762).

--- a/series.conf
+++ b/series.conf
@@ -9574,6 +9574,7 @@
 	patches.suse/iidc-ice-irdma-Rename-to-iidc_-convention.patch
 	patches.suse/iidc-ice-irdma-Break-iidc.h-into-two-headers.patch
 	patches.suse/ice-Replace-ice-specific-DSCP-mapping-num-with-a-ker.patch
+	patches.suse/iidc-ice-irdma-Update-IDC-to-support-multiple-consum.patch
 	patches.suse/netlink-fix-policy-dump-for-int-with-validation-call.patch
 	patches.suse/Bluetooth-ISO-Fix-not-using-SID-from-adv-report.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for-MT7925.patch
