idpf: remove unreachable code from setting mailbox (jsc#PED-13728 jsc#PED-13762).

--- a/series.conf
+++ b/series.conf
@@ -9526,6 +9526,7 @@
 	patches.suse/ixgbe-add-E610-.set_phys_id-callback-implementation.patch
 	patches.suse/ixgbe-devlink-add-devlink-region-support-for-E610.patch
 	patches.suse/idpf-assign-extracted-ptype-to-struct-libeth_rqe_inf.patch
+	patches.suse/idpf-remove-unreachable-code-from-setting-mailbox.patch
 	patches.suse/net-ibmveth-Indented-struct-ibmveth_adapter-correctl.patch
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
