idpf: set mac type when adding and removing MAC filters (jsc#PED-13728).

--- a/series.conf
+++ b/series.conf
@@ -11931,6 +11931,7 @@
 	patches.suse/wifi-ath11k-fix-group-data-packet-drops-during-rekey.patch
 	patches.suse/ice-fix-NULL-access-of-tx-in_use-in-ice_ll_ts_intr.patch
 	patches.suse/idpf-fix-UAF-in-RDMA-core-aux-dev-deinitialization.patch
+	patches.suse/idpf-set-mac-type-when-adding-and-removing-MAC-filte.patch
 	patches.suse/i40e-Fix-potential-invalid-access-when-MAC-list-is-e.patch
 	patches.suse/ixgbe-fix-incorrect-map-used-in-eee-linkmode.patch
 	patches.suse/ax25-properly-unshare-skbs-in-ax25_kiss_rcv.patch
