idpf: implement core RDMA auxiliary dev create, init, and destroy (jsc#PED-13728 jsc#PED-13762).

--- a/series.conf
+++ b/series.conf
@@ -11165,6 +11165,7 @@
 	patches.suse/RDMA-mlx5-Fix-UMR-modifying-of-mkey-page-size.patch
 	patches.suse/tcp-call-tcp_measure_rcv_mss-for-ooo-packets.patch
 	patches.suse/idpf-use-reserved-RDMA-vectors-from-control-plane.patch
+	patches.suse/idpf-implement-core-RDMA-auxiliary-dev-create-init-a.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-mac80211-don-t-unreserve-never-reserved-chanctx.patch
 	patches.suse/wifi-cfg80211-Fix-interface-type-validation.patch
