idpf: implement get LAN MMIO memory regions (jsc#PED-13728 jsc#PED-13762).

--- a/series.conf
+++ b/series.conf
@@ -11169,6 +11169,7 @@
 	patches.suse/idpf-implement-RDMA-vport-auxiliary-dev-create-init-.patch
 	patches.suse/idpf-implement-remaining-IDC-RDMA-core-callbacks-and.patch
 	patches.suse/idpf-implement-IDC-vport-aux-driver-MTU-change-handl.patch
+	patches.suse/idpf-implement-get-LAN-MMIO-memory-regions.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-mac80211-don-t-unreserve-never-reserved-chanctx.patch
 	patches.suse/wifi-cfg80211-Fix-interface-type-validation.patch
