virtchnl2: rename enum virtchnl2_cap_rss (jsc#PED-13728).

--- a/series.conf
+++ b/series.conf
@@ -11176,6 +11176,7 @@
 	patches.suse/wifi-iwlwifi-mvm-fix-scan-request-validation.patch
 	patches.suse/wifi-iwlwifi-mvm-set-gtk-id-also-in-older-FWs.patch
 	patches.suse/net-usb-cdc-ncm-check-for-filtering-capability.patch
+	patches.suse/virtchnl2-rename-enum-virtchnl2_cap_rss.patch
 	patches.suse/xfrm-Duplicate-SPI-Handling.patch
 	patches.suse/wifi-rtw89-Fix-rtw89_mac_power_switch-for-USB.patch
 	patches.suse/wifi-rtl8xxxu-Fix-RX-skb-size-for-aggregation-disabl.patch
