libeth: move idpf_rx_csum_decoded and idpf_rx_extracted (jsc#PED-13728 jsc#PED-13762).

--- a/series.conf
+++ b/series.conf
@@ -7237,6 +7237,7 @@
 	patches.suse/bnxt_en-Refactor-TX-ring-free-logic.patch
 	patches.suse/bnxt_en-Extend-queue-stop-start-for-TX-rings.patch
 	patches.suse/bnxt_en-Add-TPH-support-in-BNXT-driver.patch
+	patches.suse/libeth-move-idpf_rx_csum_decoded-and-idpf_rx_extract.patch
 	patches.suse/page_pool-avoid-infinite-loop-to-schedule-delayed-wo.patch
 	patches.suse/msft-hv-3195-net-mana-Allow-tso_max_size-to-go-up-to-GSO_MAX_SIZE.patch
 	patches.suse/msft-hv-3196-hv_netvsc-Use-VF-s-tso_max_size-value-when-data-path.patch
